fix APIs that do not explicitly define an attribute capable of handling multiple values. This vagueness then forces all call sites to examine each value in the attribute collection to convert it to a list, etc.